Html file updated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,30 @@
     <title>Recipe-Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-color: antiquewhite;">
+
+    <main style="display: flex; justify-content: center;">
+
+ <main style="background-color: white; box-sizing: content-box; width: 10cm; height: 15cm; border-radius: 1cm; ">
     
+    <div style="display: flex; justify-content: center; margin-top: 1cm;;">
+
+        <image  style="border-radius: 0.5cm;"
+        src="/recipe-page-main/assets/images/image-omelette.jpeg"
+        alt="Picture"
+        width="350"
+        height="150"
+        />
+
+    </div>
+
+    <div style="padding-left: 2cm;">
+        Simple Omelette Recipe
+    </div>
+
+ </main>
+
+</main>
+
 </body>
 </html>
